# playmat

./: .gitignore  Cargo.toml  Justfile  docker-compose.yml  index.html
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: devcontainer.yml  playmat.yml  server.yml
client/: Cargo.toml  build.rs
client/src/: client.rs  main.rs  ui.rs
server/: Cargo.toml
server/config/: default.toml
server/proto/: auth.proto
server/src/: adapters.rs  build.rs  config.rs  features.rs  main.rs
server/src/features/: auth_register_user.rs  dbinit.rs  mod.rs  register_user.rs
server/src/features/auth/: register_user.rs
server/src/repository/: users.rs
server/src/services/: auth.rs
src/: lib.rs  main.rs  renderer.rs  window.rs
web/: index.html
