[workspace]
members = ["server"]
resolver = "2"

[workspace.dependencies]
tonic = "0.11.0"
tonic-build = "0.11.0"
prost = "0.12.3"
config = "0.14.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
env_logger = "0.11.3"