[package]
name = "playmat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = { version = "0.30.3", features = ["rwh_05"] }
env_logger = "0.11"
log = "0.4"
wgpu = "0.20.1"
pollster = "0.3.0"
bytemuck = { version = "1.16.1", features = [ "derive" ] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "0.20.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }