[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
mongodb = "2.8.2"
bcrypt = "0.15.1"
log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }